# frcw-dev

./: Cargo.toml
benches/: recom.rs
examples/: ia_recom_chain.sh  pa_tilted_rep_wins.sh  va_short_bursts_gingles.sh
src/: buffers.rs  graph.rs  init.rs  lib.rs  objectives.rs  partition.rs  spanning_tree.rs
src/recom/: mod.rs  opt.rs  run.rs  tilted.rs
src/recom/short_bursts/: core.rs  mod.rs  packets.rs  writers.rs
src/recom/tilted/: core.rs  fixed.rs  full_rescore.rs  incremental.rs  metropolis.rs  mod.rs  packets.rs  writers.rs
src/stats/: mod.rs  self_loops.rs  sums.rs  writers.rs
test_fixtures/graphs/: 6x6.json  IA_counties.json
test_fixtures/src/: lib.rs
tests/: objectives_test.rs  revrecom_dist_test.rs  short_bursts_test.rs  step_test.rs  tilted_test.rs
