[package]
name = "frcw"
version = "0.1.3"
authors = ["Parker J. Rule <parker.rule@tufts.edu>", "Peter Rock <peter.r.rock2@gmail.com>"]
edition = "2021"

[dependencies]
# clap = "2.33.4"
clap = "4.5.51"
crossbeam-channel = "0.5.0"
crossbeam = "0.8.0"
mimalloc = {version = "0.1.27", default-features=false}
ndarray = { version = "0.14", optional = true }
ndarray-linalg = { version = "0.13", features = ["openblas-system"], optional = true }
pcompress = "1.0.6"
petgraph = "0.8.3"
rand = { version = "0.9.2", features = ["small_rng"] }
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
sha3 = "0.10.0"
snafu = "0.8.9"
itertools = "0.14.0"
binary-ensemble = "0.3.0"

[dev-dependencies]
rstest = "0.10.0"
criterion = "0.3"
approx = "0.5.0"
test_fixtures = { path = "test_fixtures" }

[features]
# Enables spanning tree statistics (and eventually other features
# that depend on a working BLAS installation).
linalg = ["ndarray", "ndarray-linalg"]

[[bench]]
name = "recom"
harness = false

[profile.dev]
split-debuginfo = "unpacked"
debug = true
opt-level = 3

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"

